initial commit with ui part of project

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,21 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.isActive {
+  background-color: rgb(255, 255, 193);
+}
+.loader {
+  width: 56px;
+  height: 56px;
+  border: 6px solid rgba(0, 0, 0, 0.1);
+  border-top-color: currentColor;
+  border-radius: 50%;
+  animation: spin 0.9s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
