--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,16 +44,50 @@ body {
 }
 
 .custom-scroll::-webkit-scrollbar {
-  width: 8px;
+  width: 2px;
+  height: 90%;
 }
 
 .custom-scroll::-webkit-scrollbar-thumb {
-  background-color: #0017c9;
-  height: 20%;
+  background-color: #5a6cf3;
+  height: 1%;
+  width: 10px;
 }
 
 .custom-scroll::-webkit-scrollbar-track {
   background: #e0e0e0;
+  height: 1%;
+  width: 2px;
+}
 
-  height: 20%;
+.chat_bg {
+  background: linear-gradient(to left, #2c18db41, #2ee99236);
+}
+
+.card-bg {
+  background: rgba(88, 112, 245, 0.116);
+  border-radius: 16px;
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgb(179, 178, 252);
+}
+
+.no-scroll::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+@keyframes transfusion {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.transfusion:hover {
+  background-color: #bedbff;
+  background-size: 20%;
+  animation: transfusion 1s ease;
 }
